codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

CODEX · Tool Call
┊ • Ran echo
┊   │ this_is_a_very_long_
┊   │ single_token_that_wi
┊   │ … +2 lines
┊   └ error: first line on
┊     stderr
┊     error: second line on
┊     stderr
