codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__raw_mode_toggle_transcript.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
rich before:
───────────────────────────────────────
YOU
│ Please format this
│ for copying
───────────────────────────────────────

CODEX

  - first item
  - second item

   Col     Value
  ━━━━━━  ━━━━━━━
   code    x = 1

  copy me


CODEX · Tool Calls
┊ ✓ workspace.in… · 5ms · Ctrl+T details

raw on:
Please format this
for copying
- first item
- second item

| Col | Value |
| --- | --- |
| code | `x = 1` |

```text
copy me
```

CODEX · Tool Calls
┊ Called workspace.inspect({"path":"README.md"})
┊ structured output
┊ second line

rich after:
───────────────────────────────────────
YOU
│ Please format this
│ for copying
───────────────────────────────────────

CODEX

  - first item
  - second item

   Col     Value
  ━━━━━━  ━━━━━━━
   code    x = 1

  copy me


CODEX · Tool Calls
┊ ✓ workspace.in… · 5ms · Ctrl+T details
