codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__single_line_command_over_highlight_limit_uses_plain_text_fallback.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
┊ • Ran AAAAAAAAAAAAAAAA
┊   │ AAAAAAAAAAAAAAAA
┊   │ AAAAAAAAAAAAAAAA
┊   │ … +254 lines
┊   └ (no output)
