codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

CODEX · Tool Call
┊ ✓ a_very_lon… · Ctrl+T
