codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__stderr_tail_more_than_five_lines_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

CODEX · Tool Calls

┊ • Ran seq 1 10 1>&2 && false
┊   └ 1
┊     2
┊     … +6 lines (ctrl + t to view transcript)
┊     9
┊     10
